# shortener_url_api

./: .gitignore  README.md
backend/: .dockerignore  .gitignore  Dockerfile  Dockerfile.consumer  alembic.ini  docker-compose.yaml  justfile  pyproject.toml
backend/.semgrep/: project-rules.yml
backend/app/: di.py  main.py
backend/app/adapters/base/: repository.py
backend/app/adapters/domain/: urls_repository.py
backend/app/api/middleware/: error_middleware.py
backend/app/api/routers/healthcheck/: data_types.py  routers.py
backend/app/api/routers/schemas/: urls.py
backend/app/api/routers/urls/: _types.py  di.py  exceptions.py  routers.py  utils.py
backend/app/api/schemas/: info.py
backend/app/dto/: info.py  urls.py
backend/app/exceptions/: auth.py  base.py  uow.py  urls.py
backend/app/models/: urls.py
backend/app/service_layer/cqrs/: __init__.py
backend/app/service_layer/cqrs/command/: __init__.py  abc_command.py  command_service.py
backend/app/service_layer/cqrs/query/: __init__.py  abc_query.py  query_service.py
backend/app/service_layer/services/: __init__.py  exceptions.py  info.py  urls.py
backend/app/service_layer/unit_of_work/: exceptions.py  uow.py
backend/app/settings/: __init__.py  app_setup.py  config.py  database.py  logger_config.yaml  redis_config.py
backend/docker/compose/app/: docker-compose.test.yml  docker-compose.yaml  docker-compose.yml
backend/docker/compose/infra/: docker-compose.yml  infra.yml
backend/docker/compose/infra/compose/: broker.yml  cache.yml  common.yml  db.yml
backend/docker/compose/monitoring/: docker-compose.yml
backend/docker/compose/monitoring/loki/: config.yml
backend/docker/compose/monitoring/prometheus/: prometheus.yml
backend/docker/compose/monitoring/promtail/: config.yml
backend/docker/dockerfiles/: App.dockerfile  Consumer.dockerfile  Dockerfile  Migration.dockerfile  Test.dockerfile
backend/docker/infra/: docker-compose.yml
backend/docker/infra/pgbouncer/: pgbouncer.ini
backend/env/: .env.example
backend/just/: all.just  convenience.just  db.just  docs.just  env.just  helpers.just  kafka.just  local.just  main.just  prepare.just  quality.just  req.just  stacks.just  test.just
backend/migrations/versions/: 2025_04_08_0152-730111f6ffcc_init3.py  2025_04_08_0200-935a0dccf0b0_init4.py  2025_05_04_2339-7d98efa025ab_new_fields.py  2025_05_23_2243-f2f3a6c20412_update_user_id.py  2025_05_23_2318-270922bb3f80_update_id.py
backend/pgbouncer/: pgbouncer.ini
backend/proto/common/v1/: common.proto
backend/proto/shortener/v1/: shortener.proto
backend/proto/user_urls/v1/: user_urls.proto
backend/scripts/: gen_grpc.sh  gen_proto_doc.sh  run_app.sh  run_grpc.sh  run_tests.sh
backend/src/: main.py  main_grpc.py  test_check.py
backend/src/application/_mappers/: __init__.py  entity_mapper.py  serialization_mapper.py  url_mapper.py
backend/src/application/dtos/: urls.py  users.py
backend/src/application/exceptions/: __init__.py  base.py
backend/src/application/interfaces/: __init__.py  broker.py  cache.py  repository.py  uow.py
backend/src/application/mappers/: __init__.py  url_mapper.py
backend/src/application/use_cases/: __init__.py  create_short_url.py  delete_url.py  get_user_urls.py  redirect_to_original_url.py  update_url.py
backend/src/application/use_cases/internal/: __init__.py  add_new_url_to_cache.py  check_key_in_cashe.py  create_uniq_key_in_cache.py  get_target_url_by_key.py  process_new_url.py  process_url_state_update.py  publish_data_to_broker.py  publish_to_broker_for_update.py
backend/src/config/: __init__.py  app_setup.py  setup.py
backend/src/config/ioc/: __init__.py  consumer_providers.py  di.py  providers.py
backend/src/config/settings/: __init__.py  _base_settings.py  app.py  base.py  broker.py  cors.py  database.py  loader.py  logger_config.yaml  logging.py  redis.py
backend/src/domain/: __init__.py
backend/src/domain/entities/: __init__.py  url.py
backend/src/domain/exceptions/: __init__.py  base.py  domain.py
backend/src/domain/services/: __init__.py  key_generator.py
backend/src/infrastructures/_mappers/: url_db_mapper.py  url_mapper.py
backend/src/infrastructures/broker/: __init__.py  new_url_publish_queue.py  publisher.py
backend/src/infrastructures/broker/consumers/: common.py  consumer_new_url.py  consumer_update_url.py
backend/src/infrastructures/cache/: __init__.py  redis_client.py
backend/src/infrastructures/db/: __init__.py  repository.py  session.py  uow.py
backend/src/infrastructures/db/migrations/: env.py
backend/src/infrastructures/db/models/: __init__.py  base.py  click_inbox.py  urls.py
backend/src/infrastructures/exceptions/: __init__.py  base.py  uow.py
backend/src/infrastructures/mappers/: __init__.py  url_db_mapper.py
backend/src/presentation/_mappers/: url_mapper.py  user_mapper.py
backend/src/presentation/api/middleware/: __init__.py  error_middleware.py
backend/src/presentation/api/rest/: __init__.py
backend/src/presentation/api/schemas/: healthcheck.py  pagination.py  urls.py  users.py
backend/src/presentation/exceptions/: __init__.py  auth.py  urls.py
backend/src/presentation/grpc/: __init__.py  server.py
backend/src/presentation/grpc/interceptors/: __init__.py  reflection_v1_compat.py
backend/src/presentation/grpc/services/: __init__.py  shortener.py  user_urls.py
backend/src/presentation/mappers/: __init__.py  url_mapper.py  user_mapper.py
backend/src/shortener_app/: __main__.py
backend/src/shortener_app/application/dtos/: urls.py
backend/src/shortener_app/application/exceptions/: __init__.py
backend/src/shortener_app/application/interfaces/: __init__.py  broker.py  (+6 more)
backend/src/shortener_app/config/: __init__.py  setup.py
backend/src/shortener_app/domain/: __init__.py
backend/tests/fixtures/: database.py  environment.py
backend/tests/integration/: conftest.py
backend/tests/migrations/: conftest.py  test_migrations.py
backend/tests/testkit/: broker.py  cache.py  codec.py  internal_uc.py  keygen.py  publish_queue.py  repository.py  uow.py  url_facade.py
(+138 files in other folders)
