[project]
name = "shortener"
version = "0.0.1"
description = ""
authors = [{ name = "mrKazzila", email = "mrkazzila@gmail.com" }]
readme = "README.md"
requires-python = "~=3.13.7"

dependencies = [
    "fastapi==0.125.0",
    "prometheus-fastapi-instrumentator==7.1.0",
    "uvicorn==0.38.0",

    "sqlalchemy==2.0.45",
    "alembic==1.17.2",
    "asyncpg==0.31.0",

    "validators==0.35.0",
    "dishka==1.7.2",

    "redis==7.1.0",
    "structlog==25.5.0",

    "faststream[cli,kafka]==0.6.4",

    "opentelemetry-api==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-instrumentation-fastapi==0.60b1",
    "opentelemetry-exporter-otlp==1.39.1",

    "prometheus-client==0.23.1",

    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "grpcio>=1.76.0",
    "protobuf>=6.33.2",
    "grpcio-reflection>=1.76.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "coverage==7.13.0",
    "httpx==0.28.1",
    "pyright==1.1.407",
    "ruff==0.14.9",
    "grpcio-tools>=1.76.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-section-index>=0.3.10",
    "mkdocs-autorefs>=1.4.3",
    "import-linter>=2.9",
    "ty>=0.0.13",
]



# ==========================
# ===== TOOLS SETTINGS =====
# ==========================
[tool.pytest.ini_options]
addopts = "-v -ra --import-mode=importlib"
testpaths = ["tests"]

strict_markers = true
strict_config = true

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

filterwarnings = [
    "error",
]

markers = [
    "unit: fast unit tests",
    "integration: tests with db/redis/etc",
    "e2e: end-to-end tests",
]


[tool.ruff]
respect-gitignore = true
line-length = 79
target-version = "py313"
src = ["src", "tests"]
extend-exclude = [
    "src/generated/**",
]

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "I",
    "A",
    "F",
    "E",
    "W",
    "N",
    "Q",
    "UP",
    "PT",
    "C4",
    "ERA",
    "RET",
    "ARG",
    "PTH",
    "FLY",
    "ANN",
    "COM",
    "G001",
]
ignore = [
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",
    "ANN401",
    "PT007",
]

[tool.ruff.format]
skip-magic-trailing-comma = false
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true
lines-after-imports = 1
lines-between-types = 0
known-local-folder = ["src"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"


[tool.pyright]
pythonVersion = "3.13"
typeCheckingMode = "standard"

include = ["src", "tests"]

exclude = [
    ".venv",
    "env",
    "docs",
    "**/__pycache__",
]

ignore = [
    "src/generated/**",
    "src/infrastructures/db/migrations/versions/**",
]

venvPath = "."
venv = ".venv"

reportMissingImports = "error"
reportMissingModuleSource = "warning"
reportMissingTypeStubs = "none"

# strictListInference = true
# strictDictionaryInference = true
# strictSetInference = true

# reportUnknownParameterType = "warning"
# reportUnknownArgumentType = "warning"
# reportUnknownLambdaType = "warning"

# reportUnknownVariableType = "warning"
# reportUnknownMemberType = "warning"

# reportMissingTypeArgument = "warning"

# reportUntypedFunctionDecorator = "warning"
# reportUntypedClassDecorator = "warning"
# reportUntypedBaseClass = "warning"

# reportIncompatibleMethodOverride = "warning"
# reportUninitializedInstanceVariable = "warning"
# reportMissingSuperCall = "warning"
# reportUnusedImport = "warning"

# strict = [
#   "src/domain/**",
#   "src/application/**",
# ]


[tool.importlinter]
root_package = "src"
include_external_packages = true

# 1) Слои: presentation -> application -> domain
[[tool.importlinter.contracts]]
name = "Layering: presentation -> application -> domain"
type = "layers"
layers = [
    "src.presentation",
    "src.application",
    "src.domain",
]

# 2) The domain must be clean: no external frameworks and no “external” layers.
[[tool.importlinter.contracts]]
name = "Domain is pure"
type = "forbidden"
source_modules = [
    "src.domain",
]
forbidden_modules = [
    # inner layers that the domain must not know
    "src.application",
    "src.presentation",
    "src.infrastructures",
    "src.config",
    "src.generated",
    # external libraries / infrastructure
    "fastapi",
    "starlette",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "redis",
    "aioredis",
    "grpc",
]

# 3) The application must not depend on presentation/infrastructure/config/generated.
[[tool.importlinter.contracts]]
name = "Application boundaries"
type = "forbidden"
source_modules = [
    "src.application",
]
forbidden_modules = [
    "src.presentation",
    "src.infrastructures",
    "src.config",
    "src.generated",
    # The application must not pull web/db directly.
    "fastapi",
    "starlette",
    "sqlalchemy",
    "alembic",
    "grpc",
]

# 4) Presentation must not go directly to infrastructure (only to application)
[[tool.importlinter.contracts]]
name = "Presentation does not import infrastructure"
type = "forbidden"
source_modules = [
    "src.presentation",
]
forbidden_modules = [
    "src.infrastructures",
]

# 5) Infrastructure must not import presentation
[[tool.importlinter.contracts]]
name = "Infrastructure does not import presentation"
type = "forbidden"
source_modules = [
    "src.infrastructures",
]
forbidden_modules = [
    "src.presentation",
]

# 6) Internal use_cases/internal must not be imported from outside the application.
[[tool.importlinter.contracts]]
name = "Application internals are private"
type = "forbidden"
source_modules = [
    "src.presentation",
    "src.infrastructures",
    "src.domain",
    "src.config",
]
forbidden_modules = [
    "src.application.use_cases.internal",
]


[tool.ty.environment]
python-version = "3.13"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]
exclude = [
    ".venv/**",
    "env/**",
    "docs/**",
    "src/generated/**",
    "src/infrastructures/db/migrations/**",
]

[tool.ty.terminal]
output-format = "concise"
error-on-warning = false


# ==========================
# ===== ALEMBIC CONFIG =====
# ==========================
[tool.alembic]
script_location = "%(here)s/src/infrastructures/db/migrations"
file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"

prepend_sys_path = ["%(here)s/src"]

timezone = "UTC"
truncate_slug_length = 40

[[tool.alembic.post_write_hooks]]
name = "ruff-format"
type = "module"
module = "ruff"
options = "format REVISION_SCRIPT_FILENAME"
