[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "shortener_app"
version = "0.0.1"
description = ""
authors = [{ name = "mrKazzila", email = "mrkazzila@gmail.com" }]
readme = "README.md"
requires-python = ">=3.13,<3.14"

dependencies = [
    "fastapi==0.125.0",
    "prometheus-fastapi-instrumentator==7.1.0",
    "uvicorn==0.38.0",

    "sqlalchemy==2.0.45",
    "alembic==1.17.2",
    "asyncpg==0.31.0",

    "validators==0.35.0",
    "dishka==1.7.2",

    "redis==7.1.0",
    "structlog==25.5.0",

    "faststream[cli,kafka]==0.6.4",

    "opentelemetry-api==1.39.1",
    "opentelemetry-sdk==1.39.1",
    "opentelemetry-instrumentation-fastapi==0.60b1",
    "opentelemetry-exporter-otlp==1.39.1",

    "prometheus-client==0.23.1",

    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "grpcio>=1.76.0",
    "protobuf>=6.33.2",
    "grpcio-reflection>=1.76.0",
]

[dependency-groups]
dev = [
    "pytest==9.0.2",
    "pytest-asyncio==1.3.0",
    "coverage==7.13.0",
    "httpx==0.28.1",
    "ruff==0.14.9",
    "grpcio-tools>=1.76.0",
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.2",
    "mkdocs-gen-files>=0.6.0",
    "mkdocs-literate-nav>=0.6.2",
    "mkdocs-section-index>=0.3.10",
    "mkdocs-autorefs>=1.4.3",
    "import-linter>=2.9",
    "ty>=0.0.13",
]



# ===== TOOLS SETTINGS =====

# ==========================
# ===== ALEMBIC CONFIG =====
# ==========================
[tool.alembic]
script_location = "%(here)s/src/shortener_app/infrastructures/db/migrations"
file_template = "%%(year)d_%%(month).2d_%%(day).2d_%%(hour).2d%%(minute).2d-%%(rev)s_%%(slug)s"

prepend_sys_path = ["%(here)s/src"]

timezone = "UTC"
truncate_slug_length = 40

[[tool.alembic.post_write_hooks]]
name = "ruff-format"
type = "module"
module = "ruff"
options = "format REVISION_SCRIPT_FILENAME"



# ==========================
# ===== importlinter =======
# ==========================
[tool.importlinter]
root_package = "shortener_app"
include_external_packages = true

# 1) Layers: presentation -> application -> domain
[[tool.importlinter.contracts]]
name = "Layering: presentation -> application -> domain"
type = "layers"
layers = [
    "shortener_app.presentation",
    "shortener_app.application",
    "shortener_app.domain",
]

# 2) The domain must be clean: no external frameworks and no “external” layers.
[[tool.importlinter.contracts]]
name = "Domain is pure"
type = "forbidden"
source_modules = [
    "shortener_app.domain",
]
forbidden_modules = [
    # inner layers that the domain must not know
    "shortener_app.application",
    "shortener_app.presentation",
    "shortener_app.infrastructures",
    "shortener_app.config",
    "shortener_app.generated",
    # external libraries / infrastructure
    "fastapi",
    "starlette",
    "sqlalchemy",
    "alembic",
    "pydantic",
    "redis",
    "aioredis",
    "grpc",
]

# 3) The application must not depend on presentation/infrastructure/config/generated.
[[tool.importlinter.contracts]]
name = "Application boundaries"
type = "forbidden"
source_modules = [
    "shortener_app.application",
]
forbidden_modules = [
    "shortener_app.presentation",
    "shortener_app.infrastructures",
    "shortener_app.config",
    "shortener_app.generated",
    # The application must not pull web/db directly.
    "fastapi",
    "starlette",
    "sqlalchemy",
    "alembic",
    "grpc",
]

# 4) Presentation must not go directly to infrastructure (only to application)
[[tool.importlinter.contracts]]
name = "Presentation does not import infrastructure"
type = "forbidden"
source_modules = [
    "shortener_app.presentation",
]
forbidden_modules = [
    "shortener_app.infrastructures",
]

# 5) Infrastructure must not import presentation
[[tool.importlinter.contracts]]
name = "Infrastructure does not import presentation"
type = "forbidden"
source_modules = [
    "shortener_app.infrastructures",
]
forbidden_modules = [
    "shortener_app.presentation",
]

# 6) Internal use_cases/internal must not be imported from outside the application.
[[tool.importlinter.contracts]]
name = "Application internals are private"
type = "forbidden"
source_modules = [
    "shortener_app.presentation",
    "shortener_app.infrastructures",
    "shortener_app.domain",
    "shortener_app.config",
]
forbidden_modules = [
    "shortener_app.application.use_cases.internal",
]



# ==========================
# ========= PyTest =========
# ==========================
[tool.pytest.ini_options]
addopts = "-v -ra --import-mode=importlib"
testpaths = ["tests"]

strict_markers = true
strict_config = true

asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
asyncio_default_test_loop_scope = "function"

filterwarnings = [
    "error",
]

markers = [
    "unit: fast unit tests",
    "integration: tests with db/redis/etc",
    "e2e: end-to-end tests",
]



# ==========================
# ========= Ruff ===========
# ==========================
[tool.ruff]
respect-gitignore = true
line-length = 79
target-version = "py313"
src = ["src", "tests"]
extend-exclude = [
    "src/shortener_app/generated/**",
    "src/shortener_app/infrastructures/db/migrations/**",
]

[tool.ruff.lint]
fixable = ["ALL"]
select = [
    "I",
    "A",
    "F",
    "E",
    "W",
    "N",
    "Q",
    "UP",
    "PT",
    "C4",
    "ERA",
    "RET",
    "ARG",
    "PTH",
    "FLY",
    "ANN",
    "COM",
    "G001",
]
ignore = [
    "ANN002",
    "ANN003",
    "ANN201",
    "ANN202",
    "ANN401",
    "PT007",
]

[tool.ruff.format]
skip-magic-trailing-comma = false
quote-style = "double"
indent-style = "space"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["E402"]

[tool.ruff.lint.isort]
split-on-trailing-comma = true
combine-as-imports = true
lines-between-types = 0
known-first-party = ["shortener_app"]

[tool.ruff.lint.flake8-quotes]
inline-quotes = "double"
multiline-quotes = "double"
docstring-quotes = "double"



# ==========================
# ====== setuptools ========
# ==========================
[tool.setuptools.packages.find]
where = ["src"]



# ==========================
# ====== Ty ========
# ==========================
[tool.ty.terminal]
output-format = "concise"
error-on-warning = false

[tool.ty.environment]
python-version = "3.13"
root = ["./src"]

[tool.ty.src]
include = ["src", "tests"]
exclude = [
    ".venv/**",
    "env/**",
    "docs/**",
    "src/shortener_app/generated/**",
    "src/shortener_app/infrastructures/db/migrations/**",
]
